--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,10 @@
                 "tsx": "never"
             }
         ],
-        "@typescript-eslint/no-unsafe-assignment": "off"
+        "@typescript-eslint/no-unsafe-assignment": 0,
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-unsafe-member-access": 0,
+        "@typescript-eslint/no-unsafe-call": 0,
+        "enforceForOrderingRelations": 0
     }
 }
